k8s/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexusgear-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "nexusgear-backend.aryan-rai.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexusgear-backend-service
            port:
              number: 80
  - host: "nexusgear.aryan-rai.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexusgear-frontend-service
            port:
              number: 80
